# hs-webserver

./: CHANGELOG.md  hs-webserver.cabal
app/: Main.hs
src/: WebServer.hs
src/WebServer/: Http.hs  Tcp.hs
src/WebServer/Http/: Request.hs  Response.hs  StatusCodes.hs  Types.hs
